# radio-astronomy-by-notebooks

./: .gitignore  General-interferometry.ipynb  fourierexploration.py
ra-tutorial-1/: General-interferometry.ipynb  fourier-basics-ANSWERS.ipynb  fourier-basics.ipynb  fourierexploration.py
ra-tutorial-1/apsynsim/: README  changelog
ra-tutorial-2/: .gitignore  my-first-radio-image.ipynb  pyproject.toml  pytest.ini  setup.cfg  sgrastar-reduction-ANSWER.py
ra-tutorial-2/ifrsim/: noise.py
ra-tutorial-2/notebooks/: ifrsim  noise-cross-correlation-ANSWERS.ipynb  noise-cross-correlation.ipynb  verify-cross-correlation-ANSWERS.ipynb
ra-tutorial-2/test/: t_noise.py
ra-tutorial-3/: lofar-station-imaging-ANSWERS.ipynb  lofar-station-imaging.ipynb  pyproject.toml  self-calibration-EXAMPLE.py  self-calibration.ipynb  setup.cfg
ra-tutorial-4/: my-first-radio-image.ipynb  sgrac.uvf
ra-tutorial-4/L294309_SAP000_SB010_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB020_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB030_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB040_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB050_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB100_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB110_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB120_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB140_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB150_uv_casa.MS/: table.f0
ra-tutorial-4/L294309_SAP000_SB170_uv_casa.MS/: table.f0
ra-tutorial-5/: self-calibration.ipynb
(+192 files in other folders)
