[metadata]
name = lofaracm
version = 0.0.1
author = "Michiel A. Brentjens"
author_email = brentjens@astron.nl
url = "https://github.com/brentjens"

[options]
packages = ifrsim
install_requires =
    astropy
    numpy
    aplpy
    lofarantpos
    matplotlib
    scipy
    importlib; python_version == "2.6"

